static/base.css
/* ... */
#repositoryList a{
    overflow: hidden;
    white-space: nowrap;
}

#repositoryList .col{
    overflow: hidden;
    padding: 0px 4px;
}

#repositoryList .col-9{
    max-width: 79%;
}

#repositoryList .col-10{
    max-width: 83.33333333%;
    width: auto;
}

.repoContainer{
    padding:0px 10px;
}

#repositoryList .dropdown-menu{
    position: absolute;
    right: 0px;
    top: 0px;
    z-index: 4;
    background-color: #0059a5;
    border: black solid 1px;
    border-radius: 6px;
    pointer-events: auto;
    width:min-content;
}

#repositoryList .dropdown-menu a{
    color: white;
    text-decoration: none;
    white-space: nowrap;
    display: block;
}

#repositoryList .dropdown-menu span{
    display: block;
    width: 100%;
    padding:0px 10px;
    white-space: nowrap;
}

#repositoryList .dropdown-menu a:hover,
#repositoryList .dropdown-menu span:hover{
    background-color: #001d3b;
    color: white;
}

.repositoryTripleDot{
    position: absolute;
    right: 35px;
    background: none;
    border: none;
    z-index: 3;
}

.repositoryTripleDot:after{
    display: none;
}

.repoIndent{
    padding-left: 10px;
    margin-left:12px;
    border-left: solid #9ca4c1 1px;
}

#repositoryList ul.files {
    list-style-type: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow:  hidden;
}

#repositoryList ul.folders {
    list-style-type: none;
}

#repositoryList ul.repositories i.material-symbols-outlined.md-18 {
    position: relative;
    top: 4px;
    font-size: 22px;
}

#repositoryList ul.repositories .repo-actions i.material-symbols-outlined.md-18 {
    visibility: hidden;
}

#repositoryList ul.repositories .repoFile:hover .repo-actions i.material-symbols-outlined.md-18 {
    visibility: visible;
}

#repositoryList ul.repositories .repoContainer:hover .repo-actions i.material-symbols-outlined.md-18 {
    visibility: visible;
}

#nodeList ul.nodes {
    list-style-type: none;
    padding: 0px 20px;
}

#nodeList .hierarchyNode div ul.nodes{
    padding:0px;
    color: black;
}

#nodeList .col{
    position: relative;
}

.forceHide{
    display: none !important;
}

.forceShow{
    display: block !important;
    visibility: visible !important;
}

.tutorialContent em{
    font-style: normal;
    color:springgreen;
}

.windowDragging{
    cursor:grabbing !important;
}

.leftWindow .card-header i.material-symbols-outlined {
    position: relative;
    top: 5px;
}

.leftWindow .card-header i.material-symbols-outlined.interactive {
    cursor: pointer;
}

.rightWindow h5 i.material-symbols-outlined {
    position: relative;
    top: 5px;
}

div.rightWindow h5.card-header {
    font-weight: 500;
    padding: 0rem 1.0rem 0.4rem 1.00rem;
}

.rightWindow i.material-symbols-outlined.interactive {
    cursor: pointer;
}

.rightWindow button i.material-symbols-outlined.md-18 {
    position: relative;
    top: 2px;
    font-size: 18px;
    pointer-events: none;
}

ul.nav.navbar-nav .btn-outline-secondary {
    border-color: #dadada;
    color:white;
}

ul.nav.navbat-nav .btn-outline-secondary:hover{
    background-color: white;
    color: #002349;
}

.navbar{
    height:57.78px;
    padding-left:10px;
    background: rgb(0,64,133);
    background: linear-gradient(90deg, rgba(0,64,133,1) 0%, rgba(0,52,107,1) 20%, rgba(0,35,73,1) 100%);
    visibility:hidden;
    position:fixed;
    top:0px;
    left:0px;
    right:0px;
    z-index:100;
}

.navbar a{
    color: white !important;
}

#statusBar{
    position: fixed;
    bottom: 0px;
    height: 25px;
    background-color: #282828;
    color: white;
    visibility: hidden;
    padding-left: 3px;
    margin-bottom: -0.5px;
    overflow-x: auto;
    overflow-y: hidden;
}

#statusBar #scrollContainer{
    width: max-content;
}

#statusBar::-webkit-scrollbar{
    height: 2px;
}

#statusBar .statusWrapper{
    display:inline-flex;
}

#statusBar h5{
    display: inline;
    font-size: .8rem;
    font-weight: bolder;
    margin-right:5px;
    margin-left:7px;
    color:#f3b112;
}

#statusBar span{
    display: inline;
    margin-right: 5px;
    font-size: .75rem;
}

.inactiveLink {
    pointer-events: none;
    cursor: default;
 }

 #eagleAndVersion{
    margin-left:5px;
    position: absolute;
    left:5.2em
 }

 #eagleAndVersion a{
    display: block;
    padding: 0px;
    position: absolute;
    margin-top: -23px;
 }

 #eagleAndVersion span{
    display: block;
    padding: 0px;
    position: absolute;
    color: rgb(170, 170, 170);
    white-space: pre;
    cursor: pointer;
 }

 #eagleAndVersion sup{
    font-family: 'EB Garamond', serif;
    font-size: 1em;
 }

 #brandEagleIcon{
     margin-left:4px;
 }

ul.nav.navbar-nav .dropdown-menu{
    border:solid 1px #000c1a;
    border-radius: 6px;
     position: absolute;
     z-index: 100;
     background-color: #0059a5;
}

ul.nav.navbar-nav .dropdown-menu-right{
    right: 0;
    left: auto !important;
}

ul.nav.navbar-nav .dropdown-item{
    color: white;
}

ul.nav.navbar-nav .dropdown-item:hover,ul.nav.navbar-nav .dropdown-item:focus{
    background-color: #001d3b;
    color: white;
    border:none;
    outline: none;
}

#translationMenu .accordion button{
    padding: 7px 30px;
    cursor: default;
}

#translationMenu .accordion-header{
    position: relative;
}

.translationDefault{
    position:absolute;
    top: 4px;
    left:10px;
    z-index: 99;
}

#translationMenu .accordion-body button{
    margin-bottom: 5px;
    padding: 3px 10px;
}

.accordion-item{
    border-radius: 7px !important;
    overflow: hidden;
    margin-bottom:2px;
}

#translationMenu .accordion h5{
    margin-bottom: 0px;
}

.checkboxParent label{
    background-color: #011b38;
}

.checkboxParent label:hover{
    background-color: #013872;
}

.checkboxParent .btn-check:checked+.btn-outline-primary{
    background-color: #0d6efd;
}

.checkboxParent .btn-check:checked+.btn-outline-primary:hover{
    background-color: #004fa8;
}

.checkboxParent .btn-outline-primary{
    border:none;
}
/* ... */

